[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pywybot"
version = "1.0.0"
description = "Python client library for WyBot pool robots (HTTP, MQTT, and BLE)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "bassrock" }]
keywords = ["wybot", "pool", "robot", "vacuum", "ble", "mqtt", "home-assistant"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Home Automation",
]
dependencies = [
  "aiohttp>=3.9",
  "aiomqtt>=2.0",
  "bleak>=0.21",
  "bleak-retry-connector>=3.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "pytest-cov", "mypy"]

[project.urls]
Homepage = "https://github.com/bassrock/pywybot"
Issues = "https://github.com/bassrock/pywybot/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wybot = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
